ändrat så förstasidan har annorlunda body

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: "Times New Roman", Times, serif;
-    background-color: rgb(189, 187, 187);
-
+    background-color: #fff;
 }
 
-
+#frontpage {
+    font-family: "Times New Roman", Times, serif;
+    background-color: rgb(189, 187, 187);
+}
 
 header {
     position: fixed;
@@ -19,8 +21,6 @@ background: -moz-linear-gradient(top,  rgba(226,226,226,1) 0%, rgba(219,219,219,
 background: -webkit-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
-
-
 }
 
 ul {
@@ -82,11 +82,7 @@ header a:hover {
     align-items: center;  
     box-shadow: 0 0 10px #666;
     padding: 50px;
-
-    
 }
-
-
 
 #jumbo > article {
     background-color: rgba(255, 255, 255, 0.8);
@@ -121,11 +117,6 @@ header a:hover {
     list-style-type: none;
 }
 
-
-
-
-
-
 #wrapper > main {
     display: flex;
     flex-wrap: wrap;
@@ -151,6 +142,13 @@ ul {
     text-decoration: none;
     color: grey;
 
+}
+
+.container {
+    max-width: 1200px;
+    padding: 25px 30px;
+    border-radius: 5px;
+    background: #8DC2CE;
 }
 
 
