--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,33 @@ body {
 }
 
 #frontpage {
-    font-family: "Times New Roman", Times, serif;
     background-color: rgb(189, 187, 187);
+}
+
+.enhet {
+width: 362px;
+height: 40px;
+background: #C4C4C4;
+border-radius: 20px;
+}
+
+.registrera {
+position: absolute;
+width: 864px;
+height: 102px;
+left: 432px;
+top: 111px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 900;
+font-size: 64px;
+line-height: 77px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
 }
 
 header {
@@ -141,16 +166,114 @@ ul {
     pointer-events: none;        
     text-decoration: none;
     color: grey;
-
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     max-width: 1200px;
     padding: 25px 30px;
     border-radius: 5px;
     background: #8DC2CE;
+    margin-top: 150px;
 }
 
+input[type=text], select {
+    width: 60%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=text]:focus {
+    border: 3px solid #555;
+  }
+
+  #antal {
+      width: 10%;
+  }
+  
+  input[type=submit] {
+    width: 60%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin: 8px 0px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
 
 .mobile-only {
     display: none;
