--- a/static/style.css
+++ b/static/style.css
@@ -8,29 +8,35 @@ body {
 }
 
 .enhet {
-width: 362px;
-height: 40px;
-background: #C4C4C4;
-border-radius: 20px;
+    position: absolute;
+    top: 10px;
+    right: 200px;
+    width: 250px;
+    height: 40px;
+    background: #C4C4C4;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#valdenhet {
+    width: 100%;
 }
 
 .registrera {
-position: absolute;
-width: 864px;
-height: 102px;
-left: 432px;
-top: 111px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 900;
-font-size: 64px;
-line-height: 77px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
+    position: absolute;
+    left: 432px;
+    top: 11px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 64px;
+    line-height: 77px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: capitalize;
+    color: #000000;
 }
 
 header {
