Width och padding på selUser.

--- a/static/style.css
+++ b/static/style.css
@@ -289,6 +289,13 @@ input[type=text], select {
     display: none;
 }
 
+#selUser{
+    width: 200px;
+    padding: 10px;
+
+
+}
+
 
 @media screen and (max-width: 850px) {
     #wrapper > main > figure {
