--- a/static/style.css
+++ b/static/style.css
@@ -1,33 +1,18 @@
-body {
-    font-family: "Times New Roman", Times, serif;
-    background-color: #fff;
-}
-
-#frontpage {
-    background-color: rgb(189, 187, 187);
-}
-
-.enhet {
+#ssm-logga{
     position: absolute;
-    top: 10px;
-    right: 200px;
-    width: 250px;
-    height: 40px;
-    background: #C4C4C4;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#valdenhet {
-    width: 100%;
-}
-
-.registrera {
+    width: 269px;
+    height: 269px;
+    left: 51px;
+    top: -24px;
+    }
+    
+    h1 {
     position: absolute;
-    left: 432px;
-    top: 11px;
-    font-family: 'Inter';
+    height: 102px;
+    left: 600px;
+    top: 38px;
+    
+    font-family: 'Impact';
     font-style: normal;
     font-weight: 900;
     font-size: 64px;
@@ -35,77 +20,15 @@ body {
     display: flex;
     align-items: center;
     text-align: center;
-    text-transform: capitalize;
+    
     color: #000000;
-}
-
-header {
-    position: fixed;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    box-shadow: 0 0 10px #666;
-
-   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#e2e2e2+0,dbdbdb+50,d1d1d1+51,fefefe+100;Grey+Gloss+%231 */
-background: rgb(226,226,226); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
-}
-
-ul {
-    display: block;
-    list-style-type:circle;
-    margin-block-start: 2em;
-    margin-block-end: 2em;
-    margin-inline-start: 0px;
-    margin-inline-end: 20px;
-    padding-inline-start: 40px;
-    cursor: default;
-    pointer-events: none;        
-    text-decoration: none;
-    color: grey;
-}
-
-header > nav {
-    display: flex;
-    max-width: 1200px;
-    margin: auto;
-}
-
-header input {
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 0px;
-    padding-left: 5px;
-    width: 150px;
-    transition: all 0.5s;
-}
-
-header input:focus {
-    width: 200px;
-}
-
-header a {
-    color: black;
-    text-decoration: none;
-    line-height: 50px;
-    padding: 0 15px;
-}
-
-header a:hover {
-    background-color: grey;
-}
-
-#menu {
-    margin-left: auto;
-    display: flex;
-}
-
-#jumbo {
-    height: 500px;
+    } 
+    
+    #jumbo {
+    margin-top: 200px;
+    height: 480px;
     padding-top: 70px;
+    border-radius: 15px;
     background-image: url(Secondhand.jpeg);
     background-position: center;
     display: flex;
@@ -113,174 +36,121 @@ header a:hover {
     align-items: center;  
     box-shadow: 0 0 10px #666;
     padding: 50px;
-}
-
-#jumbo > article {
-    background-color: rgba(255, 255, 255, 0.8);
+    }
+    
+    #jumbo > article {
+    background-color: rgba(255, 255, 255, 0.9);
     width: 50%;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 20px;
-    box-shadow: 0 0 10px #666;
-}
-
-#jumbo > article > h2 {
-    text-align: center;
-    font-weight: bold;
-    font-size: 24px;
-    margin-bottom: 10px;
-    font-size:xx-large;
-}
-
-#jumbo > article > a {
-    display: block;
-    background-color: rgb(67, 144, 144);
-    color: rgb(0, 0, 0);
-    margin: 30px auto 0px auto;
-    width: 40%;
-    text-align: center;
-    padding: 18px;
-    box-shadow: 0 0 10px #666;
-    cursor: default;
-    pointer-events: none;        
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    border-radius: 10px;
-    list-style-type: none;
-}
-
-#wrapper > main {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: auto;
-}
-
-#wrapper > main > h1 {
-    width: 100%;
-    font-size: 36px;
-    font-weight: bold;
-    border-bottom: 2px solid black;
-    margin: 20px 0px;
-}
-
-form {
-    display:contents;
-}
-
-ul {
-    cursor: default;
-    pointer-events: none;        
-    text-decoration: none;
-    color: grey;
-}
-
-.container {
     display: flex;
     flex-direction: column;
-    max-width: 1200px;
-    padding: 25px 30px;
-    border-radius: 5px;
-    background: #8DC2CE;
-    margin-top: 150px;
-}
-
-input[type=text], select {
-    width: 60%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-  input[type=text]:focus {
-    border: 3px solid #555;
-  }
-
-  #antal {
-      width: 10%;
-  }
-  
-  input[type=submit] {
-    width: 60%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    align-items: center;
+    }
+    
+    button {
+    background: #F38649;
+    padding: 10px;
+    border-radius: 20px;
+    margin: 15px;
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin: 8px 0px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 34px;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 50%;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-
+    }
+    
+    #folder {
+    height: 480px;
+    padding-top: 70px;
+    border-radius: 15px;
+    background-color: #8DC2CE;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    padding: 50px;
+    }
+    
+    #folder > article {
+    display: flex;
+    }
+    
+    /* The switch - the box around the slider */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+        margin: 8px 0px;
+      }
+      
+      /* Hide default HTML checkbox */
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      
+      /* The slider */
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+        border-radius: 34px;
+      }
+      
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+        border-radius: 50%;
+      }
+      
+      input:checked + .slider {
+        background-color: #2196F3;
+      }
+      
+      input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+      }
+      
+      input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+      }
+    
+    nav {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 200px;
+        background-color: #BADFE8;
+        border-radius: 20px;
+    }
+    
+    nav a {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #438D9D;
+        border-radius: 20px;
+    } 
+    
+    nav a:hover, a:active {
+        text-decoration: none;
+        text-transform: uppercase;
+        background-color: #8DC2CE;
+        border-radius: 20px;
+        padding: 20px;
+    } 
 .mobile-only {
     display: none;
 }
