--- a/static/style.css
+++ b/static/style.css
@@ -5,21 +5,6 @@
     font-family: "Quicksand", sans-serif;
 }
 
-.hero{
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(45deg,#6ac1c5, #bda5ff);
-  position: relative;
-}
-
-#calendar {
-  width: 80%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 #ssm-logga{
     position: absolute;
     width: 269px;
@@ -51,7 +36,11 @@ h1 a {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: #000000;
 }
-    
+
+#title {
+    margin: 20px 0px;
+}
+
 #jumbo {
     margin-top: 180px;
     height: 480px;
