--- a/static/style.css
+++ b/static/style.css
@@ -38,11 +38,11 @@ h1 a {
 }
 
 .title {
-    margin: 20px 0px;
+    margin: 10px 0px;
 }
 
-#sel-user {
-    margin: 20px 0px;
+.selector {
+    margin: 10px 0px;
 }
 
 #jumbo {
