--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,53 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     box-sizing: border-box;
     font-family: "Quicksand", sans-serif;
+    width: auto;
+    margin: auto;
+}
+
+#aktivitet {
+    width: 100%;
+}
+
+#number {
+    width: 50%;
+}
+
+
+
+input, textarea {
+    display: block;
+    width: 100%;
+    border: 2px solid #298089;
+    padding: .5rem;
+    font-size: 18px;
+    border-radius: 5px;
+
+}
+.hero{
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg,#6ac1c5, #bda5ff);
+  position: relative;
+}
+
+#calendar {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+label {
+    display: block;
+    padding: 1rem 0 .25rem;
+    text-transform: uppercase;
+    font-size: 18px;
+    border-radius: 5px;
 }
 
 #ssm-logga{
@@ -97,8 +142,12 @@ button {
     background: #F38649;
     padding: 10px;
     border-radius: 20px;
-    margin: 15px;
     border: none;
+    border: 0;
+    width: auto;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: auto;
 }
 
 button a {
