--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    font-family: "Quicksand", sans-serif;
     margin: 0;
     padding: 0px;
     width: auto;
@@ -140,7 +139,7 @@ button {
     border-radius: 20px;
     cursor: pointer;
     margin: 15px;
-    padding: 10px;
+    padding: 15px;
     text-transform: uppercase;
     width: auto;
 }
@@ -211,6 +210,15 @@ nav a:hover {
     
     display: flex;
     flex-direction: row;
+}
+
+select {
+    border: 2px solid #298089;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 0.5rem;
+    width: 40%;
+    display: block;
 }
     
     /* The switch - the box around the slider */
