--- a/static/style.css
+++ b/static/style.css
@@ -174,6 +174,18 @@ button {
     width: auto;
 }
 
+#register{
+    background: #F38649;
+    border: 0;
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 15px;
+    text-transform: uppercase;
+    width: auto;
+
+
+}
+
 button a {
     color: #000000;
     text-decoration: none;
