--- a/static/style.css
+++ b/static/style.css
@@ -174,18 +174,6 @@ button {
     width: auto;
 }
 
-#register{
-    background: #F38649;
-    border: 0;
-    border-radius: 20px;
-    cursor: pointer;
-    padding: 15px;
-    text-transform: uppercase;
-    width: auto;
-
-
-}
-
 button a {
     color: #000000;
     text-decoration: none;
@@ -204,6 +192,7 @@ button a {
     height: 480px;
     padding: 50px;
     padding-top: 70px;
+    border-radius: 0 0 15px 15px;
     
 
     justify-content: center;
@@ -217,6 +206,7 @@ nav {
     border-radius: 20px;
     margin-top: 180px;
     padding: 20px;
+    border-radius: 20px 20px 0 0;
     
     display: flex;
     justify-content: space-around;
@@ -229,11 +219,25 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     } 
-    
+
+h2.active{
+    border-radius: 20px;
+    color: #438D9D;
+    padding: 7px;
+    text-decoration: none;
+    text-transform: uppercase;
+
+}
+a:visited, a:active {
+    border-radius: 20px;
+
+    }
+
 nav a:hover {
     background-color: #8DC2CE;
     border-radius: 20px;
     padding: 20px;
+   
 }
 
 .active {
