--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,7 @@ input#antal{
     float: right;
 }
 
-#selected {
+#selected,  #chosen {
     border: 2px solid #298089;
     border-radius: 5px;
     font-size: 18px;
@@ -51,14 +51,14 @@ input#antal{
     display: block;
 }
 
-input, 
+input,
 textarea {
     border: 2px solid #298089;
     border-radius: 5px;
     font-size: 18px;
     padding: .5rem;
 
-    
+
     display: block;
 }
 
@@ -77,7 +77,7 @@ label {
     font-size: 18px;
     padding: 1rem 0 .25rem;
     text-transform: uppercase;
-    
+
     display: block;
 }
 
@@ -89,12 +89,12 @@ label {
     height: 269px;
     width: 269px;
 }
-    
+
 h1 {
     position: absolute;
     left: 600px;
     top: 38px;
-    
+
     color: #000000;
     font-family: 'Impact';
     font-size: 64px;
@@ -106,7 +106,7 @@ h1 {
     display: flex;
     align-items: center;
     text-align: center;
-} 
+}
 
 h1 a {
     color: #000000;
@@ -130,10 +130,10 @@ h1 a {
     padding-top: 70px;
 
     display: flex;
-    align-items: center;  
+    align-items: center;
     justify-content: center;
 }
-    
+
 #jumbo > article {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
@@ -157,20 +157,20 @@ h1 a {
 
     display: flex;
     justify-content: center;
-    align-items: center;  
+    align-items: center;
 }
-    
+
 #historik-bakgrund > article {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
     padding: 20px;
     width: 50%;
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-    
+
 button {
     background: #F38649;
     border: 0;
@@ -192,7 +192,7 @@ button a {
     display: flex;
     flex-direction: row;
 }
-    
+
 #folder {
     background-color: #8DC2CE;
     background-position: center;
@@ -201,12 +201,12 @@ button a {
     padding: 50px;
     padding-top: 70px;
     border-radius: 0 0 15px 15px;
-    
+
 
     justify-content: center;
-    align-items: center;  
+    align-items: center;
 }
-    
+
 
 
 nav {
@@ -215,18 +215,18 @@ nav {
     margin-top: 180px;
     padding: 20px;
     border-radius: 20px 20px 0 0;
-    
+
     display: flex;
     justify-content: space-around;
 }
-    
+
 nav a {
     border-radius: 20px;
     color: #438D9D;
     padding: 40px;
     text-decoration: none;
     text-transform: uppercase;
-    } 
+    }
 
 h2.active{
     border-radius: 20px;
@@ -245,7 +245,7 @@ nav a:hover {
     background-color: #8DC2CE;
     border-radius: 20px;
     padding: 20px;
-   
+
 }
 
 .active {
@@ -259,7 +259,7 @@ nav a:hover {
 
 #edit {
     margin: 10px 0px;
-    
+
     display: flex;
     flex-direction: row;
 }
@@ -272,24 +272,24 @@ select {
     width: 40%;
     display: block;
 }
-    
+
     /* The switch - the box around the slider */
     .switch {
         position: relative;
         height: 34px;
         margin: 8px 0px;
         width: 60px;
-        
+
         display: inline-block;
       }
-      
+
       /* Hide default HTML checkbox */
       .switch input {
         height: 0;
         opacity: 0;
         width: 0;
       }
-      
+
       /* The slider */
       .slider {
         position: absolute;
@@ -303,7 +303,7 @@ select {
         transition: .4s;
         -webkit-transition: .4s;
       }
-      
+
       .slider:before {
         position: absolute;
         bottom: 4px;
@@ -316,21 +316,21 @@ select {
         transition: .4s;
         -webkit-transition: .4s;
       }
-      
+
       input:checked + .slider {
         background-color: #2196F3;
       }
-      
+
       input:focus + .slider {
         box-shadow: 0 0 1px #2196F3;
       }
-      
+
       input:checked + .slider:before {
         transform: translateX(26px);
         -ms-transform: translateX(26px);
         -webkit-transform: translateX(26px);
       }
-     
+
 .mobile-only {
     display: none;
 }
