--- a/static/style.css
+++ b/static/style.css
@@ -19,13 +19,20 @@ input#antal{
 }
 
 #info1{
-   float: right;
-
-}
-
-#info2{
     float: right;
-}
+    width: 30%;
+
+ 
+ }
+
+ #info2{
+    float: left;
+    width: 50%;
+   
+
+ 
+ }
+ 
 
 #selected,  #chosen {
     border: 2px solid #298089;
