--- a/static/style.css
+++ b/static/style.css
@@ -32,11 +32,12 @@ img.ui-datepicker-trigger {
     width: 18%;
     display: block;
     float: right;
-    text-align: left;
+    text-align: center;
     position: relative;
     position: absolute;
     top: 20px;
     right: 10px;
+
 
 }
 
@@ -195,17 +196,25 @@ button {
     padding: 15px;
     text-transform: uppercase;
     width: auto;
+    width: -webkit-fill-available;
+    text-align: center;
+
+
 }
 
 button a {
     color: #000000;
     text-decoration: none;
     text-transform: uppercase;
+    text-align: center;
+    width: 50%;
 }
 
 #buttonside2side {
     display: flex;
     flex-direction: row;
+    text-align: center;
+    width: 50%;
 }
 
 
@@ -219,8 +228,13 @@ button a {
     padding: 40px;
 }
 
-#register{
+#info3 {
     float: left;
+    width: 50%; 
+}
+
+#register{
+
     width: 50%;
 
 }
@@ -231,9 +245,10 @@ button a {
     border-radius: 15px;
     height: 480px;
     padding: 100px;
-    padding-top: 10px;
+    padding-top: 50px;
     border-radius: 0 0 15px 15px;
     text-align: center;
+
 
 
     justify-content: center;
@@ -248,9 +263,8 @@ button a {
     background-color: #8DC2CE;
     background-position: center;
     border-radius: 15px;
-    height: 480px;
+
     padding: 50px;
-    padding-top: 70px;
     border-radius: 0 0 15px 15px;
     text-align: center;
 
