--- a/static/style.css
+++ b/static/style.css
@@ -192,7 +192,7 @@ button {
     border: 0;
     border-radius: 20px;
     cursor: pointer;
-    margin: 15px;
+    margin: 40px;
     padding: 15px;
     text-transform: uppercase;
     width: auto;
@@ -220,7 +220,7 @@ button a {
 
 #info1{
     float: left;
-    width: 50%;
+    width: 100%;
  }
 
 #info2{
@@ -272,6 +272,7 @@ button a {
 
     justify-content: center;
     align-items: center;
+    height: 560px;
 }
 
 
