--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,212 @@
     margin: 0;
     padding: 0px;
     width: auto;
+    font-family: "ITC Franklin Gothic Book Condensed";
+    font-weight: bold;
+    font-style: normal;
+    user-select: none;
 }
+
+@font-face {
+    font-family: 'ITC Franklin Gothic Book Condensed';
+    src: url('/GUI/static/itc_franklin_gothic_book_condensed-webfont.woff2') format('woff2'),
+         url('/GUI/static/itc_franklin_gothic_book_condensed-webfont.woff') format('woff');
+}
+
+h1 {
+    color: #000000;
+    font-size: 64px;
+}
+
+#menu {
+    display: grid;
+    grid-template-areas:
+            "l1 d1 namn"
+            "l2 d2 rapport";
+    grid-auto-columns: 1fr;
+    padding: 10px;
+    grid-gap: 5px;
+}
+
+#menu a {
+    cursor: pointer;
+}
+
+#menu a:first-child {
+    grid-area: l1/l1/l2/l2;
+    align-self: center;
+}
+
+#menu a:first-child img {
+    padding: 0 0 0 50px;
+    width: 269px;
+}
+
+#menu h1 {
+    grid-area: d1/d1/d2/d2;
+    justify-self: center;
+    align-self: center;
+}
+
+#menu span {
+    grid-area: namn;
+    justify-self: right;
+}
+
+#menu a:last-child {
+    grid-area: rapport;
+    justify-self: right;
+}
+
+#menu span,
+#menu section {
+    /*border: 2px solid #298089;*/
+    border-radius: 20px;
+    font-size: 20px;
+    padding: 0.5rem;
+    width: 362px;
+    height: 60px;
+    background: #C4C4C4;
+    text-align: center;
+}
+
+#ssm-logga{
+    /*position: absolute;*/
+    /*left: 51px;*/
+    /*top: -50px;*/
+
+    /*height: 269px;*/
+    /*width: 269px;*/
+}
+
+h1 {
+    /*position: absolute;*/
+    /*left: 600px;*/
+    /*top: 38px;*/
+
+    /*color: #000000;*/
+    /*font-family: 'Impact';*/
+    /*font-size: 64px;*/
+    /*font-style: normal;*/
+    /*font-weight: 900;*/
+    /*height: 102px;*/
+    /*line-height: 77px;*/
+
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*text-align: center;*/
+}
+
+h1 a {
+    /*color: #000000;*/
+    /*font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;*/
+    /*text-decoration: none;*/
+}
+
+#chosen {
+    /*border: 2px solid #298089;*/
+    /*border-radius: 5px;*/
+    /*font-size: 18px;*/
+    /*padding: 0.5rem;*/
+    /*width: 18%;*/
+    /*display: block;*/
+    /*float: right;*/
+    /*text-align: left;*/
+    /*position: relative;*/
+    /*position: absolute;*/
+    /*top: 100px;*/
+    /*right: 10px;*/
+}
+
+#button1 {
+    /*border: 2px solid #298089;*/
+    /*border-radius: 5px;*/
+    /*font-size: 18px;*/
+    /*padding: 0.5rem;*/
+    /*width: 18%;*/
+    /*display: block;*/
+    /*float: right;*/
+    /*text-align: center;*/
+    /*position: relative;*/
+    /*position: absolute;*/
+    /*top: 40px;*/
+    /*right: 10px;*/
+}
+
+nav {
+    /*margin-top: 0px;*/
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+}
+
+nav h2 {
+    background-color: #BADFE8;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 35px 35px 0 0;
+    cursor: pointer;
+    color: #8DC2CE;
+}
+
+nav h2:hover,
+nav h2.active {
+    background-color: #8DC2CE;
+}
+nav h2:hover {
+    color: #438D9D;
+}
+
+nav h2.active {
+    color: #000;
+}
+
+/*nav h2.active:hover {*/
+/*    background: #8cbec5 ;*/
+/*}*/
+
+nav h2 a {
+    align-self: center;
+    margin: 20px;
+    text-decoration: none;
+}
+
+nav h2 a:hover {
+    margin: 0;
+    padding: 20px;
+}
+
+nav h2.active a  {
+    text-transform: uppercase;
+}
+
+form section {
+    display: flex;
+    flex-flow: column;
+}
+
+#folder1 form {
+    display: grid;
+    grid-template-areas:
+        ". ."
+        ". ."
+        ". .";
+    grid-gap: 4px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #aktivitet {
     width: 19%;
@@ -23,25 +228,7 @@ img.ui-datepicker-trigger {
 
 }
 
-#button1,
-#button2 {
-    border: 2px solid #298089;
-    border-radius: 5px;
-    font-size: 18px;
-    padding: 0.5rem;
-    width: 18%;
-    display: block;
-    float: right;
-    text-align: center;
-    position: relative;
-    position: absolute;
-    top: 40px;
-    right: 10px;
-
-
-}
-
-#selected,  #chosen {
+#selected {
     border: 2px solid #298089;
     border-radius: 5px;
     font-size: 18px;
@@ -72,9 +259,6 @@ textarea {
     font-size: 18px;
     padding: .5rem;
     text-align: center;
-
-
-
 }
 
 #calendar {
@@ -97,38 +281,9 @@ label {
     display: block;
 }
 
-#ssm-logga{
-    position: absolute;
-    left: 51px;
-    top: -50px;
 
-    height: 269px;
-    width: 269px;
-}
 
-h1 {
-    position: absolute;
-    left: 600px;
-    top: 38px;
 
-    color: #000000;
-    font-family: 'Impact';
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 900;
-    height: 102px;
-    line-height: 77px;
-
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-
-h1 a {
-    color: #000000;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-decoration: none;
-}
 
 .title,
 .selector {
@@ -217,29 +372,6 @@ button a {
     width: 50%;
 }
 
-
-#info1{
-    float: left;
-    width: 100%;
- }
-
-#info2{
-
-    padding: 40px;
-}
-
-#info3 {
-    float: left;
-    width: 50%; 
-}
-
-#register{
-
-    width: 50%;
-    align-items: center;
-
-}
-
 #folder1 {
     background-color: #8DC2CE;
     background-position: center;
@@ -277,48 +409,7 @@ button a {
 
 
 
-nav {
-    background-color: #BADFE8;
-    border-radius: 20px;
-    margin-top: 180px;
-    padding: 20px;
-    border-radius: 20px 20px 0 0;
 
-    display: flex;
-    justify-content: space-around;
-}
-
-nav a {
-    border-radius: 20px;
-    color: #438D9D;
-    padding: 40px;
-    text-decoration: none;
-    text-transform: uppercase;
-    }
-
-h2.active{
-    border-radius: 20px;
-    color: #438D9D;
-    padding: 7px;
-    text-decoration: none;
-    text-transform: uppercase;
-
-}
-a:visited, a:active {
-    border-radius: 20px;
-
-    }
-
-nav a:hover {
-    background-color: #8DC2CE;
-    border-radius: 20px;
-    padding: 20px;
-
-}
-
-.active {
-    background-color: #8DC2CE;
-}
 
 #edit-icon {
     margin-left: 10px;
@@ -401,6 +492,13 @@ select {
 
 .mobile-only {
     display: none;
+}
+
+
+
+
+#folder1 form > section:last-child {
+    grid-area: 2/1/2/span 2;
 }
 
 @media screen and (max-width: 850px) {
