--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,31 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0px;
+    padding: 0;
     width: auto;
-    font-family: "ITC Franklin Gothic Book Condensed";
+    font-family: "Helvetica";
     font-weight: bold;
     font-style: normal;
     user-select: none;
 }
+.button-blue {
+    background-color: #BADFE8;
+    cursor: pointer;
+    color: #8DC2CE;
+}
 
-@font-face {
-    font-family: 'ITC Franklin Gothic Book Condensed';
-    src: url('/GUI/static/itc_franklin_gothic_book_condensed-webfont.woff2') format('woff2'),
-         url('/GUI/static/itc_franklin_gothic_book_condensed-webfont.woff') format('woff');
+.button-blue:hover,
+.button-blue.active {
+    background-color: #8DC2CE;
+}
+
+.button-blue:hover {
+    color: #438D9D;
+}
+
+.button-blue.active {
+    color: #000;
+    text-transform: uppercase;
 }
 
 h1 {
@@ -53,6 +66,8 @@ h1 {
 #menu span {
     grid-area: namn;
     justify-self: right;
+    background: #C4C4C4;
+    padding: 5px;
 }
 
 #menu a:last-child {
@@ -60,79 +75,16 @@ h1 {
     justify-self: right;
 }
 
+#menu section {
+    padding: 20px;
+}
+
 #menu span,
 #menu section {
-    /*border: 2px solid #298089;*/
     border-radius: 20px;
     font-size: 20px;
-    padding: 0.5rem;
     width: 362px;
-    height: 60px;
-    background: #C4C4C4;
     text-align: center;
-}
-
-#ssm-logga{
-    /*position: absolute;*/
-    /*left: 51px;*/
-    /*top: -50px;*/
-
-    /*height: 269px;*/
-    /*width: 269px;*/
-}
-
-h1 {
-    /*position: absolute;*/
-    /*left: 600px;*/
-    /*top: 38px;*/
-
-    /*color: #000000;*/
-    /*font-family: 'Impact';*/
-    /*font-size: 64px;*/
-    /*font-style: normal;*/
-    /*font-weight: 900;*/
-    /*height: 102px;*/
-    /*line-height: 77px;*/
-
-    /*display: flex;*/
-    /*align-items: center;*/
-    /*text-align: center;*/
-}
-
-h1 a {
-    /*color: #000000;*/
-    /*font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;*/
-    /*text-decoration: none;*/
-}
-
-#chosen {
-    /*border: 2px solid #298089;*/
-    /*border-radius: 5px;*/
-    /*font-size: 18px;*/
-    /*padding: 0.5rem;*/
-    /*width: 18%;*/
-    /*display: block;*/
-    /*float: right;*/
-    /*text-align: left;*/
-    /*position: relative;*/
-    /*position: absolute;*/
-    /*top: 100px;*/
-    /*right: 10px;*/
-}
-
-#button1 {
-    /*border: 2px solid #298089;*/
-    /*border-radius: 5px;*/
-    /*font-size: 18px;*/
-    /*padding: 0.5rem;*/
-    /*width: 18%;*/
-    /*display: block;*/
-    /*float: right;*/
-    /*text-align: center;*/
-    /*position: relative;*/
-    /*position: absolute;*/
-    /*top: 40px;*/
-    /*right: 10px;*/
 }
 
 nav {
@@ -143,25 +95,10 @@ nav {
 }
 
 nav h2 {
-    background-color: #BADFE8;
     width: 100%;
     display: flex;
     justify-content: space-around;
     border-radius: 35px 35px 0 0;
-    cursor: pointer;
-    color: #8DC2CE;
-}
-
-nav h2:hover,
-nav h2.active {
-    background-color: #8DC2CE;
-}
-nav h2:hover {
-    color: #438D9D;
-}
-
-nav h2.active {
-    color: #000;
 }
 
 /*nav h2.active:hover {*/
@@ -177,10 +114,6 @@ nav h2 a {
 nav h2 a:hover {
     margin: 0;
     padding: 20px;
-}
-
-nav h2.active a  {
-    text-transform: uppercase;
 }
 
 form section {
