--- a/static/style.css
+++ b/static/style.css
@@ -310,7 +310,7 @@ textarea {
     display: inline-block;
     content: "";
     border-radius: 50%;
-    background-color: white;*/
+    background-color: white;
     border-radius: 50%;
     content: "";
     height: 26px;
