--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,11 @@
     font-style:normal
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 label {
     border-radius: 5px;
     font-size: 18px;
@@ -247,9 +252,12 @@ nav h2 a {
     text-decoration: none;
 }
 
-nav h2 a:hover {
+nav h2:hover a {
     margin: 0;
     padding: 20px;
+    width: 100%;
+    text-align: center;
+    border-radius: 35px 35px 0 0;
 }
 
 #buttoncontainer,
